<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">File Manager</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="go_to_home_folder">Go to home folder</string>
    <string name="set_as_home_folder">Set as home folder</string>
    <string name="home_folder_updated">Home folder updated</string>
    <string name="copy_path">Copy path to clipboard</string>
    <string name="path_copied">Path copied</string>
    <string name="select_audio_file">Please select an audio file</string>
    <string name="search_folder">Search folder</string>
    <string name="rooted_device_only">This operation works only on rooted devices</string>
    <string name="recents">Recents</string>
    <string name="show_recents">Show recents</string>
    <string name="invert_colors">Invert colors</string>

    <!-- Open as -->
    <string name="open_as">Open as</string>
    <string name="text_file">Text file</string>
    <string name="image_file">Image file</string>
    <string name="audio_file">Audio file</string>
    <string name="video_file">Video file</string>
    <string name="other_file">Other file</string>

    <!-- Compression -->
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="compress_as">Compress as</string>
    <string name="compressing">Compressing…</string>
    <string name="decompressing">Decompressing…</string>
    <string name="compression_successful">Compression successful</string>
    <string name="decompression_successful">Decompression successful</string>
    <string name="compressing_failed">Compressing failed</string>
    <string name="decompressing_failed">Decompressing failed</string>

    <!-- Favorites -->
    <string name="manage_favorites">Manage favorites</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="favorites_activity_placeholder">You can add frequently used folders to favorites for easy access from anywhere.</string>

    <!-- File Editor -->
    <string name="file_editor">File Editor</string>

    <!-- Storage analysis -->
    <string name="storage_analysis">Storage analysis</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="archives">Archives</string>
    <string name="others">Others</string>
    <string name="storage_free">free</string>
    <string name="total_storage">Total storage: %s</string>

    <!-- Settings -->
    <string name="enable_root_access">Enable root access</string>
    <string name="press_back_twice">Require pressing Back twice to leave the app</string>
    
    <!-- Protection -->
    <string name="protect">Protect</string>
    <string name="unprotect">Unprotect</string>
    <string name="password_protect_item">Password protect item</string>
    <string name="password_protect_items">Password protect items</string>
    <string name="item_is_protected">This item is protected</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="access_item">Access protected item</string>
    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="authenticate_to_access">Authenticate to access this item</string>
    <string name="item_protection_setup">Item Protection</string>
    <string name="choose_protection_method">Choose protection method</string>
    <string name="manage_item_protection">Manage item protection</string>
    <string name="protection_setup_successfully">Protection setup successfully</string>
    <string name="fingerprint_setup_successfully">Fingerprint setup successfully</string>
    <string name="pin_protection_setup">Set a 4-digit PIN</string>
    <string name="fingerprint_protection_setup">Use your fingerprint to authenticate</string>
    <string name="protection_type">Protection type</string>
    <string name="manage_pin">Manage PIN</string>
    <string name="pin_does_not_match">PINs do not match. Please try again.</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_changed_successfully">PIN changed successfully</string>
    <string name="enable_item_protection">Enable item protection</string>
    <string name="item_protection_method">Item protection method</string>
    <string name="change_item_protection_method">Change protection method</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
</resources>
