<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_protection_dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <org.fossify.commons.views.MyTextView
        android:id="@+id/item_protection_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_protection_setup"
        android:textSize="@dimen/big_text_size" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/item_protection_dialog_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/choose_protection_method" />

    <RadioGroup
        android:id="@+id/item_protection_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin">

        <org.fossify.commons.views.MyCompatRadioButton
            android:id="@+id/item_protection_radio_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_protection_setup" />

        <org.fossify.commons.views.MyCompatRadioButton
            android:id="@+id/item_protection_radio_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_protection_setup" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/item_protection_pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="vertical"
        android:visibility="gone">

        <org.fossify.commons.views.MyTextView
            android:id="@+id/item_protection_pin_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pin" />

        <org.fossify.commons.views.MyEditText
            android:id="@+id/item_protection_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:inputType="numberPassword"
            android:maxLength="4" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/item_protection_confirm_pin_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/confirm_pin" />

        <org.fossify.commons.views.MyEditText
            android:id="@+id/item_protection_confirm_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:inputType="numberPassword"
            android:maxLength="4" />

    </LinearLayout>

</LinearLayout>
